sidebar is almost done

--- a/docs/concepts/what-is-visual-ai.mdx
+++ b/docs/concepts/what-is-visual-ai.mdx
@@ -1,7 +1,6 @@
 ---
-sidebar_position: 3
-title: Root Cause Analysis
-sidebar_title: Root Cause Analysis
+sidebar_position: 1
+title: What is Visual AI?
 ---
 
 Applitools Eyes is a powerful platform for automated visual UI testing that supports full page screenshots, page layout matching, cross-device and browser testing, test batching, baseline branching and merging, automated baseline maintenance, collaboration features, and much more.
