--- a/docs/concepts/comparing-applitools.mdx
+++ b/docs/concepts/comparing-applitools.mdx
@@ -3,4 +3,9 @@ sidebar_position: 2
 title: Comparing Applitools
 ---
 
-Applitools Eyes is a powerful platform for automated visual UI testing that supports full page screenshots, page layout matching, cross-device and browser testing, test batching, baseline branching and merging, automated baseline maintenance, collaboration features, and much more.
+
+| Feature | Applitools | Other Platforms | Benefits |
+| ---- | ---- | ----------- | | ----------- |
+| AI Powered Validation | true | false |  Error free comparisons, reduced false positives, and reduced maintenance  
+| Automated Analysis | Intelligent review of comparisons at scale | Individual, manual review | Group similar errors across different environments for easier, quicker maintenance at scale 
+ 
