almost cleaned up

--- a/docs/quickstart/codeless/pdfs.mdx
+++ b/docs/quickstart/codeless/pdfs.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 4
-title: PDFs
+title: How To Test PDFs with Applitools
+sidebar_label: PDFs
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
