--- a/docs/quickstart/desktop/windows-coded-UI.mdx
+++ b/docs/quickstart/desktop/windows-coded-UI.mdx
@@ -1,7 +1,6 @@
 ---
-sidebar_position: 1
-title: Windows Coded UI
-description: This is a short description that we can use to intro the box
+title: Using Windows Coded UI and Applitools
+sidebar_label: Windows Coded UI
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
