--- a/docs/quickstart/desktop/windows-uft.mdx
+++ b/docs/quickstart/desktop/windows-uft.mdx
@@ -1,7 +1,6 @@
 ---
-sidebar_position: 2
-title: Windows UFT
-description: This is a short description that we can use to intro the box
+title: Using Windows UFT and Applitools
+sidebar_label: Windows UFT
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
@@ -9,7 +8,6 @@ import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 # Windows UFT Tutorial
 
 The Applitools Eyes UFT/QTP SDK allows you to easily add visual checkpoints to your UFT/QTP tests. It takes care of getting screenshots of your application from the underlying UFT, sending them to the Eyes server for validation and failing the test in case differences are found.
-
 
 
 ## Install the SDK
