--- a/docs/quickstart/mobile/appium/appium-native-csharp.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-csharp.mdx
@@ -1,5 +1,6 @@
 ---
-title: C#
+title: Appium Native for C# and Applitools Tutorial
+sidebar_label: Appium for C#
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
