--- a/docs/quickstart/mobile/appium/appium-native-java.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-java.mdx
@@ -1,5 +1,6 @@
 ---
-title: Java
+title: Appium Native for Java and Applitools Tutorial
+sidebar_label: Appium for Java
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
