--- a/docs/quickstart/mobile/appium/appium-native-javascript.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-javascript.mdx
@@ -1,5 +1,6 @@
 ---
-title: Javascript
+title: Appium Native for Javascript and Applitools Tutorial
+sidebar_label: Appium for Javascript
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
