--- a/docs/quickstart/mobile/appium/appium-native-php.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-php.mdx
@@ -1,5 +1,6 @@
 ---
-title: PHP
+title: Appium Native for PHP and Applitools Tutorial
+sidebar_label: Appium for PHP
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
