--- a/docs/quickstart/mobile/appium/appium-native-python.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-python.mdx
@@ -1,5 +1,6 @@
 ---
-title: Python
+title: Appium Native for Python and Applitools Tutorial
+sidebar_label: Appium for Python
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
