--- a/docs/quickstart/mobile/appium/appium-native-ruby.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-ruby.mdx
@@ -1,10 +1,11 @@
 ---
-title: Ruby
+title: Appium Native for Ruby and Applitools Tutorial
+sidebar_label: Appium for Ruby
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
+# Appium Native for Ruby and Applitools
 
-# Appium Native Ruby Tutorial
 The Applitools Eyes Appium Ruby SDK allows you to easily add visual checkpoints to your Ruby Appium tests. It takes care of getting screenshots of your application from the underlying WebDriver, sending them to the Eyes server for validation and failing the test in case differences are found.
 
 ## Install the SDK
