--- a/docs/quickstart/mobile/calabash/android.mdx
+++ b/docs/quickstart/mobile/calabash/android.mdx
@@ -1,10 +1,10 @@
 ---
-sidebar_position: 2
-title: Calabash Android
+title: Using Calabash and Applitools For Testing Android Apps
+sidebar_label: Calabash Android
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
-##  ✅ Prerequisites
+## Prerequisites
 
 1. Create a [free Applitools account](https://applitools.com/users/register) and get your Applitools API KEY
 
@@ -25,7 +25,7 @@ import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
     Installing `git` is optional. You need this mainly to clone the demo project from the Github repository. Instead of installing `git`, you can simply download the Zip file from the repo. Further, If you are using Mac OSX, you already have `git`.
     ::: 
 
-##  🚀 - Run the existing demo app 
+##  🚀 Run the existing demo app 
 
 1. Get the code:
     * Option 1: `git clone https://github.com/applitools/calabash-test-android-app`
@@ -39,7 +39,7 @@ import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
     - `export APPLITOOLS_API_KEY=YOUR_KEY`
     - `bundle exec calabash-android run ./app/build/outputs/apk/debug/app-debug.apk`
 
-## 🤓 - Add Applitools to an existing project
+## 🤓 Add Applitools to an existing project
 
 ## Install the SDK
 
