--- a/docs/quickstart/mobile/calabash/iOS.mdx
+++ b/docs/quickstart/mobile/calabash/iOS.mdx
@@ -1,11 +1,12 @@
 ---
-sidebar_position: 1
-title: Calabash iOS
+title: Using Calabash and Applitools For Testing iOS Apps
+sidebar_label: Calabash iOS
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
-## ✅ Prerequisites 
+## Prerequisites 
 
 1. Create a [free Applitools account](https://applitools.com/users/register) and get your Applitools API KEY
 
@@ -28,7 +29,7 @@ import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 4. Build the application using XCode (ensure that -cal target is built)
 
-## 🚀 - Run the existing demo app 
+## 🚀 Run the existing demo app 
 
 1. Get the code:
     * Option 1: `git clone https://github.com/applitools/calabash-test-ios-app`
@@ -40,7 +41,7 @@ import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
     - `bundle install`
     - `bundle exec cucumber`
 
-## 🤓 - Add Applitools to an existing project
+## 🤓 Add Applitools to an existing project
 
 ## Install the SDK
 
