--- a/docs/quickstart/mobile/espresso.mdx
+++ b/docs/quickstart/mobile/espresso.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 2
-title: Espresso
+title: Using Espresso and Applitools For Testing Android Apps
+sidebar_label: Espresso
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
