--- a/docs/quickstart/mobile/xcui/android.mdx
+++ b/docs/quickstart/mobile/xcui/android.mdx
@@ -1,5 +1,6 @@
 ---
-title: XCUI Objective C
+title: Using XCUI and Applitools For Testing Android Apps
+sidebar_label: XCUI Android
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
