--- a/docs/quickstart/mobile/xcui/iOS.mdx
+++ b/docs/quickstart/mobile/xcui/iOS.mdx
@@ -1,5 +1,6 @@
 ---
-title: XCUI Swift
+title: Using XCUI and Applitools For Testing iOS Apps
+sidebar_label: XCUI iOS
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
