--- a/docs/quickstart/screenshots/c-sharp.mdx
+++ b/docs/quickstart/screenshots/c-sharp.mdx
@@ -1,48 +1,11 @@
 ---
-sidebar_position: 2
-title: Screenshot C#
+sidebar_label: Screenshot C#
+title: Comparing Screenshots with C# and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
-
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
-
-## Running Tests with Applitools
-
-### Prerequisites
-
-1. A [free Applitools account](https://applitools.com/users/register) and Applitools API KEY
-
-  :::tip Tip: Unsure how to set up your API key?
-  Learn how to get started at [Setting Up](/getting-started/setting-up-your-environment.html)
-  :::
-
-
-2. Set the `APPLITOOLS_API_KEY` environment variable 
-
-    - Mac: `export APPLITOOLS_API_KEY='YOUR_API_KEY'`
-
-    - Windows: `set APPLITOOLS_API_KEY='YOUR_API_KEY'`
-
-    ::: tip
-    1. You may skip this step if you want to hard code the API KEY inside the tutorial project's code.
-    2. It's better to store APPLITOOLS_API_KEY in the system variables (in Windows) or in the `~/.bash_profile` (in Mac) so that it is accessible from all Terminal shells
-    :::
-
-3. Install Visual Studio from [here](https://visualstudio.microsoft.com/downloads/) 
-
-4. Install git from [https://git-scm.com​](https://git-scm.com)
-
-    :::tip
-    Installing `git` is optional. You need this mainly to clone the demo project from the Github repository. Instead of installing `git`, you can simply download the Zip file from the repo. Further, If you are using Mac OSX, you already have `git`.
-    ::: 
-
-## 🚀 - Run the existing demo app 
+## Run the existing demo app 
 
 1. Get the code:
     * Option 1: `git clone https://github.com/applitools/tutorial-images-csharp-basic`
@@ -64,7 +27,7 @@ Do not open Visual Studio by double clicking it as it will not load environment 
 
 5. Hit Run button in Visual Studio to run the code
 
-## 5.2 🤓 - Add Applitools to an existing project
+## Add Applitools to an existing project
 
 1. Include the SDK as a Nuget Package
 	* In Visual Studio select Project > Manage Nuget Packages
