--- a/docs/quickstart/screenshots/cli.mdx
+++ b/docs/quickstart/screenshots/cli.mdx
@@ -1,7 +1,8 @@
 ---
-sidebar_position: 1
-title: CLI Tutorial
+sidebar_label: Screenshot CLI
+title: Comparing Screenshots with the CLI
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 The Applitools CLI Tool allows you to easily run visual UI tests on a collection of image files, by placing them inside a directory (also works with nested directory structure). It runs as a standalone jar file and can be invoked as a process by any programming language.
@@ -121,11 +122,5 @@ Here is an example of what can be step1.regions:
 500,100,240,123
 ```
 In order to include a capture of the entire image too, add an empty line as part of the regions list.
-
-
-## Analyze your test results
-Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
-
-[Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
 <PartialOutro/>
