--- a/docs/quickstart/screenshots/php.mdx
+++ b/docs/quickstart/screenshots/php.mdx
@@ -1,16 +1,9 @@
 ---
-sidebar_position: 6
-title: Screenshot PHP
+sidebar_label: Screenshot PHP
+title: Comparing Screenshots with PHP and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
-
-
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
 
 
 ## Install the SDK
