--- a/docs/quickstart/screenshots/python.mdx
+++ b/docs/quickstart/screenshots/python.mdx
@@ -1,17 +1,10 @@
 ---
-sidebar_position: 5
-title: Screenshot Python
+sidebar_label: Screenshot Python
+title: Comparing Screenshots with Python and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
-
-## Running Tests with Applitools
 
 ### Prerequisites
 
