--- a/docs/quickstart/screenshots/xctest-objective-c.mdx
+++ b/docs/quickstart/screenshots/xctest-objective-c.mdx
@@ -1,7 +1,8 @@
 ---
-sidebar_position: 8
-title: Screenshot XCTest Objective-C
+sidebar_label: Screenshot XCTest Objective-C
+title: Comparing Screenshots with XCTest Objective-C and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
