--- a/docs/quickstart/screenshots/xctest-swift.mdx
+++ b/docs/quickstart/screenshots/xctest-swift.mdx
@@ -1,7 +1,8 @@
 ---
-sidebar_position: 8
-title: Screenshot XCTest Swift
+sidebar_label: Screenshot XCTest Swift
+title: Comparing Screenshots with XCTest Swift and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
