--- a/docs/quickstart/storybook/storybook-vue.mdx
+++ b/docs/quickstart/storybook/storybook-vue.mdx
@@ -1,44 +1,16 @@
 ---
-sidebar_position: 2
-title: Storybook React
+sidebar_label: Storybook Vue
+title: Testing Vue Storybook Components with Applitools
 ---
-
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
-
-
-## Getting Started with Applitools
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
-
-## Running Tests with Applitools
-
-### Prerequisites
-
-1. A [free Applitools account](https://applitools.com/users/register) and Applitools API KEY
-
-  :::tip Tip: Unsure how to set up your API key?
-  Learn how to get started at [Setting Up](/getting-started/setting-up-your-environment.html)
-  :::
-
-2. Node.js <https://nodejs.org>
-
-3. Git <https://git-scm.com>
-
-  :::tip Note: Installing `git` is optional
-  Installing git is used to clone the demo project from the Github repository. Instead of installing `git`, you can simply download the Zip file from the repository. Further, if you are Mac, you already have `git`.
-  :::
 
 
 ### Running the Example Project
 
 1. Clone or download the repository and navigate to that folder
 ```
-git clone https://github.com/applitools/tutorial-storybook-react.git
-cd tutorial-storybook-react
+git clone https://github.com/applitools/tutorial-storybook-vue.git
+cd tutorial-storybook-vue
 ```
 *Note: you can alternatively download the project as a Zip file and extract it*
 
@@ -49,16 +21,20 @@ npm install
 
 3. Run the example test
 ```
-APPLITOOLS_API_KEY="[Your API Key]" npm test
+APPLITOOLS_API_KEY="[Your API Key]" npx eyes-storybook
 ```
 
-This will first set your `APPLITOOLS_API_KEY` into the node process then run `npm test`.
+This will first set your `APPLITOOLS_API_KEY` into the node process then run `npx eyes-storybook`.
 
-:::tip Notes:
-You can alternatively run `npx eyes-storybook`.
-
+:::tip
 `npx` comes as part of Node.js installation. It automatically runs the `eyes-storybook` executable.
 :::
+
+You should see that it takes about 10 seconds to startup and complete all the tests.
+
+
+You should see the results of all the components in seconds.
+
 
 
 ### Adding Applitools Eyes to an Existing Node.js Storybook Project
@@ -72,6 +48,9 @@ npm install --save-dev @applitools/eyes-storybook
 ## Applitools Eyes Storybook SDK
 
 ### How it works
+
+![storybook architecture](/img/storybook-marketecture.png)
+
 
 The Applitools Eyes Storybook SDK does not require you to change any code! You simply need to add Applitools SDK as a dependency and run the CLI command!
 
