--- a/docs/quickstart/web/protractor.mdx
+++ b/docs/quickstart/web/protractor.mdx
@@ -1,11 +1,10 @@
 ---
-sidebar_position: 6
-title: Protractor
+title: Protractor and Applitools Tutorial For Testing Web Apps
+sidebar_label: Protractor
 ---
-
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
-
+# Protractor and Applitools Tutorial
 ## ✅ Prerequisites 
 
 1. Create a [free Applitools account](https://applitools.com/users/register) and get the Applitools API KEY
