--- a/docs/quickstart/web/puppeteer.mdx
+++ b/docs/quickstart/web/puppeteer.mdx
@@ -1,9 +1,11 @@
 ---
-sidebar_position: 4
-title: Puppeteer
+title: Puppeteer and Applitools Tutorial For Testing Web Apps
+sidebar_label: Puppeteer
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
+# Puppeteer and Applitools Tutorial
 ## Getting Started with Applitools Eyes & Puppeteer
 
 ### Adding Applitools Eyes to a Puppeteer test
@@ -138,10 +140,6 @@ You can use the same command to run your tests as you did before, just remember 
 ### Check out a working demo
 
 See it in action with our example [over on GitHub](https://github.com/applitools/tutorial-puppeteer)!
-
-<a href="https://github.com/applitools/tutorial-puppeteer">
-https://github.com/applitools/tutorial-puppeteer
-</a>
 
 ### More information
 
