--- a/docs/quickstart/web/testcafe.mdx
+++ b/docs/quickstart/web/testcafe.mdx
@@ -1,9 +1,11 @@
 ---
-sidebar_position: 7
-title: Testcafe
+title: Testcafe and Applitools Tutorial For Testing Web Apps
+sidebar_label: Testcafe
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
+# Testcafe and Applitools Tutorial
 ## Getting Started with Applitools
 
 Want to learn more about the Applitools platform and how it works? First get started with one of the following:
