--- a/docs/quickstart/web/watir.mdx
+++ b/docs/quickstart/web/watir.mdx
@@ -1,9 +1,11 @@
 ---
-sidebar_position: 8
-title: Watir
+title: Watir and Applitools Tutorial For Testing Web Apps
+sidebar_label: Watir
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
+# Watir Tutorial
 ## Getting Started with Applitools
 
 Want to learn more about the Applitools platform and how it works? First get started with one of the following:
