--- a/docs/quickstart/screenshots/java.mdx
+++ b/docs/quickstart/screenshots/java.mdx
@@ -1,18 +1,9 @@
 ---
-sidebar_position: 3
-title: Screenshot Java
+sidebar_label: Screenshot Java
+title: Comparing Screenshots with Java and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
-
-
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
-
-## Running Tests with Applitools
 
 ### Prerequisites
 
