--- a/docs/quickstart/screenshots/javascript.mdx
+++ b/docs/quickstart/screenshots/javascript.mdx
@@ -1,19 +1,12 @@
 ---
-sidebar_position: 4
-title: Screenshot JavaScript
+sidebar_label: Screenshot Javascript
+title: Comparing Screenshots with Javascript and Applitools
 ---
+
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
-
-## Running Tests with Applitools
 
 ### Prerequisites
 
