added the home sidebar

--- a/docs/quickstart/web/selenium/c-sharp.mdx
+++ b/docs/quickstart/web/selenium/c-sharp.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 3
-title: C#
+title: Selenium for C# and Applitools Tutorial
+sidebar_label: Selenium for C#
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
