--- a/docs/quickstart/web/selenium/java.mdx
+++ b/docs/quickstart/web/selenium/java.mdx
@@ -1,9 +1,12 @@
 ---
-sidebar_position: 1
-title: Java
+title: Selenium for Java and Applitools Tutorial
+sidebar_label: Selenium for Java
 ---
-
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
+
 
 There are two ways to automate visual tests with Selenium in Java:
 
@@ -43,5 +46,18 @@ and you must run visual test instances for each browser you want to cover.
 
 If you want to try the classic runner,
 take the tutorial for [Selenium Java JUnit with the Classic Runner](./selenium-java-junit-classic.md).
+
+
+<Tabs>
+  <TabItem value="apple" label="Ultrafast" default>
+    This is an apple 🍎
+  </TabItem>
+  <TabItem value="orange" label="Classic">
+    This is an orange 🍊
+  </TabItem>
+  
+</Tabs>
+
+
 
 <PartialOutro/>
