--- a/docs/quickstart/web/selenium/javascript.mdx
+++ b/docs/quickstart/web/selenium/javascript.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 2
-title: JavaScript
+title: Selenium for Javascript and Applitools Tutorial
+sidebar_label: Selenium for Javascript
 ---
 
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
