--- a/docs/quickstart/web/selenium/php.mdx
+++ b/docs/quickstart/web/selenium/php.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 5
-title: PHP
+title: Selenium for PHP and Applitools Tutorial
+sidebar_label: Selenium for PHP
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
