--- a/docs/quickstart/web/selenium/python.mdx
+++ b/docs/quickstart/web/selenium/python.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 4
-title: Python
+title: Selenium for Python and Applitools Tutorial
+sidebar_label: Selenium for Python
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
