--- a/docs/quickstart/web/selenium/ruby.mdx
+++ b/docs/quickstart/web/selenium/ruby.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 4
-title: Ruby
+title: Selenium for Ruby and Applitools Tutorial
+sidebar_label: Selenium for Ruby
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
