--- a/docs/quickstart/web/webdriver/webdriverio-6.mdx
+++ b/docs/quickstart/web/webdriver/webdriverio-6.mdx
@@ -1,13 +1,10 @@
 ---
-sidebar_position: 3
-title: WebdriverIO 6
+title: WebdriverIO 6 and Applitools Tutorial
+sidebar_label: WebdriverIO 6
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
-
 # WebdriverIO 6 tutorial
-
-*Note: This is for WebdriverIO 6. There are different tutorials for <a href="/tutorials/webdriverio.html">WebdriverIO 4</a> and <a href="/tutorials/webdriverio5.html">WebdriverIO 5</a>.*
 
 ## Getting Started with Applitools
 
