--- a/docs/quickstart/web/webdriver/webdriverio-4.mdx
+++ b/docs/quickstart/web/webdriver/webdriverio-4.mdx
@@ -1,20 +1,9 @@
 ---
-sidebar_position: 1
-title: WebdriverIO 4
+title: WebdriverIO 4 and Applitools Tutorial
+sidebar_label: WebdriverIO 4
 ---
 
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
-
-
-*Note: This is for WebdriverIO 4. There are different tutorials for <a href="/tutorials/webdriverio5.html">WebdriverIO 5</a> and <a href="/tutorials/webdriverio6.html">WebdriverIO 6</a>.*
-
-## Getting Started with Applitools
-
-Want to learn more about the Applitools platform and how it works? First get started with one of the following:
-
-* [🤖 How it Works](/overview/how-it-works.html)
-* [🖼 Analyzing Differences](/overview/analyzing-differences.html)
-* [🐞 Reporting Bugs](/getting-started/reporting-bugs-from-applitools.html)
 
 ## Running Tests with Applitools
 
