--- a/docs/quickstart/web/leanft/leanft-c.mdx
+++ b/docs/quickstart/web/leanft/leanft-c.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 2
-title: LeanFT C#
+title: LeanFT C# and Applitools Tutorial
+sidebar_label: LeanFT C#
 ---
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
