--- a/docs/quickstart/web/leanft/leanft-javascript.mdx
+++ b/docs/quickstart/web/leanft/leanft-javascript.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 1
-title: LeanFT JavaScript
+title: LeanFT Javascript and Applitools Tutorial
+sidebar_label: LeanFT Javascript
 ---
 
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
