--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: Applitools
+title: Applitools Tutorials & Documentation
 sidebar_label: Home
 description: Welcome to Applitools Documentation
 hide_table_of_contents: true
@@ -19,6 +19,8 @@ import WebFrameworks from '@site/src/components/webframeworks/index.tsx'
 import MobileFrameworks from '@site/src/components/mobileframeworks/index.tsx'
 import DesktopFrameworks from '@site/src/components/desktopframeworks/index.tsx'
 import Codeless from '@site/src/components/codeless/index.tsx'
+
+# An Introduction To Applitools
 
 Applitools is a test automation platform that uses Visual AI to validate that the frontend of an application looks and works right. 
 
