--- a/docs/quickstart/storybook/storybook-angular.mdx
+++ b/docs/quickstart/storybook/storybook-angular.mdx
@@ -24,7 +24,7 @@ The picture below shows how it works
   
 4. Get the Applitools API key.
 
-![api key](/img/api-key.gif)
+![api key](/img/API-key.gif)
 
 
 5. Set the APPLITOOLS_API_KEY environment variable on your computer to this API key value.
