fixed some images

--- a/docs/getting-started/match-level.mdx
+++ b/docs/getting-started/match-level.mdx
@@ -3,7 +3,7 @@ sidebar_position: 2
 title: Setting Match Levels
 ---
 
-# How to use Applitools Match Levels
+# How to set Applitools Match Levels
 
 The match level determines the way by which Eyes compares the checkpoint image with the baseline image.
 
