easy like thursday morning

--- a/docs/quickstart/web/selenium/index.mdx
+++ b/docs/quickstart/web/selenium/index.mdx
@@ -1,7 +1,17 @@
 ---
-title: Selenium
+title: Selenium Tutorials for Applitools
 slug: /quickstart/web/selenium
+sidebar_label: Overview
 ---
 
-# Selenium
 
+Selenium is the most popular browser automation tool. It is a library of browser APIs that integerate easily with a variety of programming languages and frameworks. Applitools can easily integrate with Selenium to enhance your testing with Visual AI. 
+
+To integrate with a specific Selenium library, choose from below:
+
+- [Selenium for Java](/quickstart/web/selenium/java)
+- [Selenium for Javascript](/quickstart/web/selenium/javascript)
+- [Selenium for PHP](/quickstart/web/selenium/php)
+- [Selenium for C#](/quickstart/web/selenium/c-sharp)
+- [Selenium for Python](/quickstart/web/selenium/python)
+- [Selenium for Ruby](/quickstart/web/selenium/ruby)
